--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
             <!-- ------------- POPUP ------------- -->
 
             <div class="popup center">
-                <div class="icon">
+                <!-- <div class="icon">
                     <i class="fa fa-check"></i>
-                </div>
+                </div> -->
                 <div class="title">
                     Congratulations &#129312;
                 </div>
                 <div class="description">
-                    You seat is booked successfully
+                    You seat is booked successfully. <br> <b>Let's ready to go!!</b>
                 </div>
                 <div class="dismiss-btn">
                     <button id="dismiss-popup-btn">
